# NWGraph

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Contributors.rst  DISCLAIMER.rst  LICENSE.rst  README.html  README.md  README_VLDB.md  genindex.html  index.html  nwgraph_api.html  objects.inv  search.html  searchindex.js
.claude/: settings.local.json
_api/: classmmio_1_1MatrixMarketFile.html  classmmio_1_1MatrixMarketFile_1_1iterator.html  classmmio_1_1Range.html  (+803 more)
apb/: CMakeLists.txt  bfs.cpp  containers.cpp  dfs.cpp  dijkstra.cpp  exec.cpp  plain.cpp  spmv.cpp  tbb.cpp
bench/: CMakeLists.txt  Log.hpp  ProcessEdgelist.cpp  SourceVerifier.cpp  bc.cpp  bfs.cpp  cc.cpp  common.hpp  js.cpp  pr.cpp  sssp.cpp  tc.cpp
bench/abstraction_penalty/: CMakeLists.txt  apb_common.hpp  bfs.cpp  containers.cpp  dfs.cpp  dijkstra.cpp  exec.cpp  plain.cpp  spmv.cpp  tbb.cpp
bench/apb/: CMakeLists.txt  dfs.cpp  dijkstra.cpp  plain.cpp  spmv.cpp
bench/gapbs/: CMakeLists.txt  Log.hpp  ProcessEdgelist.cpp  bc.cpp  config.h.in  pr.cpp  tc.cpp
bench/scalability/: CMakeLists.txt  parallel_for_scaling.cpp  parallel_reduce_scaling.cpp  scalability_common.hpp
doc-src/: CMakeLists.txt  Doxyfile.in
doc-src/Graffle/: mv17.graffle  top_down_nwgr.graffle
doc-src/Notes/: Design.txt  Notes  TODO_List
doc-src/PowerPoint/: top_down_nwgraph.pptx
doc-src/sphinx/: Makefile  conf.py  index.rst  nwgraph_api.rst  requirements.txt
doc-src/sphinx/_extensions/: hydeme.py
doc-src/sphinx/_extensions/nw_exhale/: graph.py
doc-src/sphinx/_scripts/: generate_hyde.sh  indexify.bash
doc-src/sphinx/_static/css/: custom.css
doc-src/sphinx/_static/hyde_sass/: main-light.scss
doc-src/sphinx/_themes/sphinx13/: layout.html  theme.conf
doc-src/sphinx/examples/: index.rst
doc-src/sphinx/examples/bglbook/: ch3_toposort.rst  ch4_kevin_bacon.rst  ch4_loop_detection.rst  ch5_bellman_ford.rst  ch5_dijkstra.rst  ch6_kruskal.rst  ch6_prim.rst  ch7_connected.rst  ch7_strongly_connected.rst  ch8_maxflow.rst  ch9_knights_tour.rst  index.rst
doc-src/sphinx/userguide/: benchmarking.rst  footnote.rst  getting_started.rst  graph-concepts.rst  refs.bib  related.rst
doc-src/sphinx/userguide/archive/: bridge.rst  index.rst  performance.rst  programming.rst
doc-src/sphinx/userguide/old/: primer.rst
examples/bgl-book/: CMakeLists.txt  Makefile  ch3_toposort.cpp  ch4_kevin_bacon.cpp  ch4_loop_detection.cpp  ch5_bellman_ford.cpp  ch5_dijkstra.cpp  ch6_kruskal.cpp  ch6_prim.cpp  ch7_connected.cpp  ch7_strongly_connected.cpp  ch8_maxflow.cpp  ch9_knights_tour.cpp
examples/imdb/: CMakeLists.txt  dblp.cpp  dns.cpp  imdb.cpp  index.html  main.cpp  oracle+dblp.cpp  oracle.cpp
include/: CMakeLists.txt
include/nwgraph/: access.hpp  adjacency.hpp  build.hpp  compat.hpp  coo.hpp  csc.hpp  csr.hpp  edge_list.hpp  graph_adaptor.hpp  graph_base.hpp  graph_concepts.hpp  graph_traits.hpp  scrap.cpp  scrap.txt  vofos.hpp  volos.hpp  vovos.hpp
include/nwgraph/adaptors/: back_edge_range.hpp  bfs_edge_range.hpp  bfs_range.hpp  cyclic_neighbor_range.hpp  cyclic_range_adaptor.hpp  dag_range.hpp  dfs_range.hpp  edge_range.hpp  filtered_bfs_range.hpp  neighbor_range.hpp  new_dfs_range.hpp  plain_range.hpp  random_range.hpp  reverse.hpp  splittable_range_adaptor.hpp  vertex_range.hpp  worklist.hpp
include/nwgraph/algorithms/: betweenness_centrality.hpp  bfs.hpp  boykov_kolmogorov.hpp  connected_components.hpp  dag_based_mis.hpp  delta_stepping.hpp  dijkstra.hpp  jaccard.hpp  jones_plassmann_coloring.hpp  k_core.hpp  k_truss.hpp  kruskal.hpp  max_flow.hpp  maximal_independent_set.hpp  page_rank.hpp  prim.hpp  spMatspMat.hpp  triangle_count.hpp
include/nwgraph/containers/: aos.hpp  compressed.hpp  flattened.hpp  scrap.cpp  soa.hpp  zip.hpp
include/nwgraph/experimental/algorithms/: betweenness_centrality.hpp  bfs.hpp  connected_components.hpp  delta_stepping.hpp  jaccard.hpp  jones_plassmann_coloring.hpp  page_rank.hpp  triangle_count.hpp
include/nwgraph/generators/: configuration_model.hpp
include/nwgraph/graphs/: imdb-graph.hpp  karate-graph.hpp  ospf-graph.hpp
include/nwgraph/io/: MatrixMarketFile.hpp  mmio.hpp  mmio_nist.h
include/nwgraph/util/: AtomicBitVector.hpp  arrow_proxy.hpp  atomic.hpp  backend.hpp  concurrent_containers.hpp  defaults.hpp  demangle.hpp  disjoint_set.hpp  intersection_size.hpp  make_priority_queue.hpp  parallel_for.hpp  permutation_iterator.hpp  print_types.hpp  provenance.hpp  proxysort.hpp  tag_invoke.hpp  timer.hpp  traits.hpp  tuple_hack.hpp  util.hpp  util_par.hpp
test/: CMakeLists.txt  adjacency_eg.cpp  adjacency_test.cpp  aos_test.cpp  atomic_bit_vector_test.cpp  atomic_test.cpp  back_edge_test.cpp  betweenness_centrality_test.cpp  bfs_edge_range_test.cpp  bfs_test_0.cpp  bfs_test_1.cpp  binio_eg.cpp  bk_test.cpp  build_test.cpp  builtin_graphs_test.cpp  catch_main.cpp  compat_eg.cpp  compressed_test.cpp  concepts_eg.cpp  connected_component_test.cpp  containers_eg.cpp  cstar_eg.cpp  dag_range_test.cpp  degree_eg.cpp  delta_stepping_test.cpp  demangle_test.cpp  dijkstra_test.cpp  directedness_eg.cpp  disjoint_set_test.cpp  edge_list_test.cpp  edge_range_eg.cpp  filtered_bfs_test.cpp  graph_adaptor_eg.cpp  graph_adaptor_test.cpp  graph_base_test.cpp  graph_concepts_test.cpp  graph_traits_eg.cpp  graph_traits_test.cpp  index_soa_eg.cpp  indexing_eg.cpp  (+55 more)
test/common/: abstract_test.hpp  test_header.hpp
test/data/: Erdos981.mtx  Erdos991.mtx  G8.mtx  Stranke94.mtx  bktest1.mtx  bktest2.mtx  choltest.mtx  coloringData.mmio  flowtest.mtx  football.mtx  karate_0.el  karate_0.mtx  line.mmio  mmout_test.mtx  mmout_test2.mtx  mmout_test3.mtx  mmout_test4.mtx  mmout_test6.mtx  mmout_test7.mtx  mmout_test8.mtx  msttest.mtx  ring.mmio  spaceStation_1.mtx  spmatA.mmio
test/eg/: binio_eg.cpp  containers_eg.cpp  degree_eg.cpp  dijkstra_eg.cpp  edge_list_eg.cpp  edge_range_eg.cpp  graph_traits_eg.cpp  init_eg.cpp  io_eg.cpp  jaccard_eg.cpp  math_eg.cpp  neighbor_range_eg.cpp  plain_range_eg.cpp  ranges_and_concepts_eg.cpp  std_containers_eg.cpp  vertex_range_eg.cpp  zip_eg.cpp
(+957 files in other folders)
