

include(Catch2)
# message("Supported features = ${CMAKE_CXX_COMPILE_FEATURES}")

macro (nwgraph_add_exe EXENAME)
  add_executable(${EXENAME}.exe ${EXENAME}.cpp)
  target_link_libraries(${EXENAME}.exe nwgraph)
endmacro (nwgraph_add_exe)

macro (nwgraph_add_test TESTNAME)
  add_executable(${TESTNAME}.exe ${TESTNAME}.cpp)
  target_link_libraries(${TESTNAME}.exe nwgraph Catch2::Catch2 catch_main)
  target_compile_definitions(${TESTNAME}.exe PRIVATE DATA_DIR="${CMAKE_SOURCE_DIR}/data/")
  target_compile_definitions(${TESTNAME}.exe PRIVATE DATA_FILE="${CMAKE_SOURCE_DIR}/data/karate.mtx")
  add_test(NAME ${TESTNAME}_test COMMAND ${TESTNAME}.exe)
  #  catch_discover_tests(${TESTNAME})
endmacro (nwgraph_add_test)

add_library(catch_main STATIC catch_main.cpp)
target_link_libraries(catch_main Catch2::Catch2)

# Add Catch2 tests
nwgraph_add_test(aos_test)
nwgraph_add_test(back_edge_test)
nwgraph_add_test(bfs_test_0)
nwgraph_add_test(bfs_test_1)
nwgraph_add_test(compressed_test)
nwgraph_add_test(connected_component_test)
nwgraph_add_test(edge_list_test)
nwgraph_add_test(jp_coloring_test)
nwgraph_add_test(mis_test)
nwgraph_add_test(mmio_test)
nwgraph_add_test(new_dfs_test)
nwgraph_add_test(page_rank_test)
nwgraph_add_test(size_test)
nwgraph_add_test(soa_test)
nwgraph_add_test(spanning_tree_test)
nwgraph_add_test(spMatspMat_test)
nwgraph_add_test(tc_test)
nwgraph_add_test(volos_test)
nwgraph_add_test(vov_test)


# nwgraph_add_test(bk_test)
# nwgraph_add_test(kcore_test)
# nwgraph_add_test(max_flow_test)
# nwgraph_add_test(rcm_test)


# expected failures for now
# set_tests_properties(jp_coloring_test
#  PROPERTIES WILL_FAIL TRUE)

# Example programs (not catch2)
nwgraph_add_exe(adjacency_eg)
nwgraph_add_exe(compat_eg)
nwgraph_add_exe(concepts_eg)
nwgraph_add_exe(containers_eg)
nwgraph_add_exe(cstar_eg)
nwgraph_add_exe(degree_eg)
nwgraph_add_exe(dijkstra_eg)
nwgraph_add_exe(edge_list_eg)
nwgraph_add_exe(edge_range_eg)
# nwgraph_add_exe(graph_adaptor_eg)
nwgraph_add_exe(graph_traits_eg)
nwgraph_add_exe(index_soa_eg)
nwgraph_add_exe(indexing_eg)
nwgraph_add_exe(init_eg)
nwgraph_add_exe(jaccard_eg)
nwgraph_add_exe(neighbor_range_eg)
nwgraph_add_exe(plain_range_eg)
nwgraph_add_exe(proxysort_eg)
nwgraph_add_exe(random_eg)
nwgraph_add_exe(spmm_eg)
nwgraph_add_exe(stream_eg)
nwgraph_add_exe(std_containers_eg)
nwgraph_add_exe(tag_invoke_eg)
nwgraph_add_exe(tbb_eg)
nwgraph_add_exe(triangular_eg)
# nwgraph_add_exe(vector_bool_eg)
nwgraph_add_exe(vertex_range_eg)
nwgraph_add_exe(volos_eg)
nwgraph_add_exe(zip_eg)

# nwgraph_add_exe(binio_eg)
# nwgraph_add_exe(io_eg)
# nwgraph_add_exe(math_eg)
# nwgraph_add_exe(ranges_and_concepts_eg)
# nwgraph_add_exe(symmetrize_eg)


